# income-calc

./: Cargo.toml
src/: domain.rs  domain_layer.rs  income_calc.rs  income_percentage.rs  main.rs  model_layer.rs  ui_layer.rs
ui/: appwindow.slint
